Added and implemented "show noise" toggle functionality

--- a/demo/index.html
+++ b/demo/index.html
@@ -135,6 +135,19 @@ limitations under the License.
         </label>
       </div>
       <hr />
+      <div class="noise-toggle control">
+        <label class="mdl-switch mdl-js-switch" for="show-noise">
+          <input
+            type="checkbox"
+            id="show-noise"
+            class="mdl-switch__input"
+            name="showNoise"
+            checked
+          />
+          <span class="mdl-switch__label">Show Noise</span>
+        </label>
+      </div>
+      <hr />
       <h5 id="messages"></h5>
     </div>
   </body>
