--- a/demo/index.html
+++ b/demo/index.html
@@ -42,7 +42,48 @@ limitations under the License.
         position: fixed;
         top: 0;
         left: 0;
-        padding: 10px;
+        padding: 20px;
+        background-color: white;
+        width: 250px;
+        height: 100vh;
+        overflow-y: auto;
+        box-shadow: 2px 0 5px rgba(0,0,0,0.1);
+      }
+
+      #hover-info {
+        margin-top: 15px;
+        padding: 15px;
+        background-color: #f5f5f5;
+        border-radius: 4px;
+        word-wrap: break-word;
+      }
+
+      #hover-info .label {
+        font-weight: bold;
+        color: #333;
+        font-size: 14px;
+      }
+
+      #hover-info .description {
+        color: #666;
+        margin-top: 5px;
+        font-size: 12px;
+      }
+
+      #hover-info .image-container {
+        margin-top: 10px;
+        text-align: center;
+      }
+
+      #hover-info .sprite-image {
+        max-width: 100%;
+        height: auto;
+        border-radius: 4px;
+        border: 1px solid #ddd;
+      }
+
+      #hover-info.empty {
+        display: none;
       }
 
       #switch-3D {
@@ -123,8 +164,13 @@ limitations under the License.
           <span class="mdl-switch__label">Show Noise</span>
         </label>
       </div>
-      <hr />
-      <h5 id="messages"></h5>
+      <div id="hover-info" class="empty">
+        <div class="label"></div>
+        <div class="description"></div>
+        <div class="image-container">
+          <canvas class="sprite-image" width="150" height="150"></canvas>
+        </div>
+      </div>
     </div>
   </body>
 </html>
