--- a/demo/index.html
+++ b/demo/index.html
@@ -29,7 +29,7 @@ limitations under the License.
     <title>ScatterGL</title>
     <style>
       body {
-        font-family: Arial, Helvetica, sans-serif;
+        font-family: Helvetica, sans-serif;
         margin: 0;
       }
 
@@ -48,6 +48,53 @@ limitations under the License.
         height: 100vh;
         overflow-y: auto;
         box-shadow: 2px 0 5px rgba(0,0,0,0.1);
+      }
+
+      #cluster-panel {
+        position: fixed;
+        top: 0;
+        right: 0;
+        padding: 20px;
+        background-color: white;
+        width: 250px;
+        height: 100vh;
+        overflow-y: auto;
+        box-shadow: -2px 0 5px rgba(0,0,0,0.1);
+      }
+
+      #cluster-panel h5 {
+        margin-top: 0;
+        margin-bottom: 15px;
+      }
+
+      .cluster-button {
+        display: block;
+        width: 100%;
+        padding: 4px;
+        margin-bottom: 6px;
+        border: 2px solid #ddd;
+        border-radius: 4px;
+        background-color: white;
+        cursor: pointer;
+        text-align: left;
+        font-size: 10px;
+        transition: all 0.2s;
+      }
+
+      .cluster-button:hover {
+        background-color: #f5f5f5;
+        border-color: #999;
+      }
+
+      .cluster-button.active {
+        border-color: #333;
+        background-color: #e3f2fd;
+        font-weight: bold;
+      }
+
+      .cluster-button .label-index {
+        font-weight: bold;
+        margin-right: 5px;
       }
 
       #hover-info {
@@ -171,6 +218,10 @@ limitations under the License.
           <canvas class="sprite-image" width="150" height="150"></canvas>
         </div>
       </div>
+    </div>
+    <div id="cluster-panel">
+      <h5>Clusters</h5>
+      <div id="cluster-buttons"></div>
     </div>
   </body>
 </html>
