--- a/index.html
+++ b/index.html
@@ -225,9 +225,77 @@ limitations under the License.
       .button {
         margin-top: 18px;
       }
+
+      /* Loading bar styles */
+      #loading-overlay {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100vw;
+        height: 100vh;
+        background-color: rgba(255, 255, 255, 0.95);
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        z-index: 10000;
+        transition: opacity 0.3s ease-out;
+      }
+
+      #loading-overlay.hidden {
+        opacity: 0;
+        pointer-events: none;
+      }
+
+      .loading-content {
+        text-align: center;
+      }
+
+      .loading-text {
+        font-size: 24px;
+        margin-bottom: 20px;
+        color: #333;
+      }
+
+      .loading-bar-container {
+        width: 300px;
+        height: 6px;
+        background-color: #e0e0e0;
+        border-radius: 3px;
+        overflow: hidden;
+        box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+      }
+
+      .loading-bar {
+        height: 100%;
+        background: linear-gradient(90deg, #3f51b5, #5c6bc0);
+        width: 0%;
+        transition: width 0.3s ease-out;
+        border-radius: 3px;
+      }
+
+      @media (max-width: 768px) {
+        .loading-text {
+          font-size: 18px;
+        }
+        .loading-bar-container {
+          width: 80vw;
+          max-width: 300px;
+        }
+      }
     </style>
   </head>
   <body>
+    <!-- Loading overlay -->
+    <div id="loading-overlay">
+      <div class="loading-content">
+        <div class="loading-text">Loading Visualization...</div>
+        <div class="loading-bar-container">
+          <div class="loading-bar" id="loading-bar"></div>
+        </div>
+      </div>
+    </div>
+
     <div id="container"></div>
     <div id="controls">
       <hr />
