--- a/index.html
+++ b/index.html
@@ -147,6 +147,14 @@ limitations under the License.
         margin-bottom: 15px;
       }
 
+      .cluster-help {
+        color: #999;
+        opacity: 1.0;
+        font-size: 12px;
+        margin-bottom: 15px;
+        line-height: 1.4;
+      }
+
       .cluster-button {
         display: block;
         width: 100%;
@@ -358,6 +366,7 @@ limitations under the License.
     </div>
     <div id="cluster-panel">
       <h5>Clusters</h5>
+      <div class="cluster-help">Select a cluster or click on a drawing</div>
       <div id="cluster-buttons"></div>
     </div>
   <script type="text/javascript" src="bundle.min.js"></script></body>
