--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@ limitations under the License.
             value="sprites"
             checked
           />
-          <span class="mdl-radio__label">Sprites</span>
+          <span class="mdl-radio__label">Drawings</span>
         </label>
         <label class="mdl-radio mdl-js-radio" for="point-render">
           <input
